Fixed save groups functionality